--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
     "react-vertical-timeline-component": "^3.6.0"
   },
