--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "resend": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
