--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.3.2",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
@@ -21,7 +22,6 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
-    "react-scroll": "^1.9.0",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^3.4.0"
   },
